--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,9 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-#        shop_sql: true
+#        show_sql: true
         format_sql: true
 
 logging.level:
   org.hibernate.SQL: debug
+  org.hibernate.type: trace
